--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,11 @@
 body {
   margin: 0;
   background-color: #f5f6fa;
+  font-family: 'Inter', sans-serif;
 }
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&display=swap');
